--- a/GoogleDrive_Google_Colab_GitHub.ipynb
+++ b/GoogleDrive_Google_Colab_GitHub.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuFKBVcGiilaZLmluE2TaN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ocisse-jems/spark_bigdata/blob/main/GoogleDrive_Google_Colab_GitHub.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ocisse-jems/spark_bigdata/blob/develop/GoogleDrive_Google_Colab_GitHub.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +36,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "source": [
+        "# https://towardsdatascience.com/google-drive-google-colab-github-dont-just-read-do-it-5554d5824228\n",
+        "# "
+      ],
+      "metadata": {
+        "id": "YMXPjVrYV4tt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -64,6 +75,135 @@
         "from IPython.display import Image\n",
         "Image('webp.png')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "K4uaVOCBVA9E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **1. Mount Google Drive to Google Colab**"
+      ],
+      "metadata": {
+        "id": "icgUpnLTV0_K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mount Google Drive\n",
+        "from google.colab import drive # import drive from google colab\n",
+        "\n",
+        "ROOT = \"/content/drive\"     # default location for the drive\n",
+        "print(ROOT)                 # print content of ROOT (Optional)\n",
+        "\n",
+        "drive.mount(ROOT)           # we mount the google drive at /content/drive"
+      ],
+      "metadata": {
+        "id": "x9NEoFiQVBAQ",
+        "outputId": "e7e30c78-04fb-4c24-a070-448bcfafdb90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VyTMewB9VBDI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **2. Clone GitHub repository to Google Drive**"
+      ],
+      "metadata": {
+        "id": "RhPuFiYTWKX5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FXEzP0N9VBF2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1BsveaCyVBIu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fGy6Z9q4VBLm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1C7UWrSKVBOf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TWPuFWWWVBRd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9DBBj8DeVBUF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mhqvMbYsVBXI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
