--- a/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
+++ b/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOA4SleAitVxx6DcvXjvn1z",
+      "authorship_tag": "ABX9TyPygvZ1KiVdB/GngbNPinA4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,16 +48,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bLsbXlcGCyhh",
-        "outputId": "b91ae2e4-a596-49a9-b365-dcd2e81683b9"
+        "outputId": "6274a3ce-ca1c-48cc-8d8a-e52c82f97c75"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[K     |████████████████████████████████| 281.4 MB 50 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 199 kB 54.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 199 kB 58.8 MB/s \n",
             "\u001b[?25h  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
@@ -65,7 +65,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "source": [
+        "# java env\n",
+        "\n",
+        "import os\n",
+        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\""
+      ],
+      "metadata": {
+        "id": "BIX2Ae9sGe9v"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "id": "P79a-7mm9tJB"
       },
@@ -87,23 +101,54 @@
     {
       "cell_type": "code",
       "source": [
-        "path = \"\"\n",
-        "ville = spark.read.format(\"csv\").option(\"header\", \"true\").load(path)"
+        "path_csv = \"ville_1.csv\"\n",
+        "ville = spark.read.format(\"csv\").option(\"header\", \"true\").load(path_csv)"
       ],
       "metadata": {
         "id": "KcFKzWcnCmUO"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### 1ères lignes"
+      ],
       "metadata": {
-        "id": "NhgOkOLxCmY2"
+        "id": "ZivDPw_pHWvZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ville.show(3, vertical=False)"
+      ],
+      "metadata": {
+        "id": "NhgOkOLxCmY2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdc79951-12a8-4122-a749-69de1a510be1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------------------+-------------------+--------------------+--------------------+-------+-------+--------------------+------------------+----+---+------------------+------------------+\n",
+            "|  id|     vitesse_a_pied|     vitesse_a_velo|                home|             travail|sportif|casseur|              statut|           salaire|sexe|age|        sportivite|velo_perf_minimale|\n",
+            "+----+-------------------+-------------------+--------------------+--------------------+-------+-------+--------------------+------------------+----+---+------------------+------------------+\n",
+            "|5251|               0.02|               0.05|(lon:26.60 lat:28...|(lon:21.08 lat:14...|  False|  False|          reserviste|29800.610034665042|   F| 18|               0.1|               0.4|\n",
+            "|5252|0.14974625830876215|0.37436564577190534|(lon:0.26 lat:42.61)|(lon:36.35 lat:33...|  False|  False|          professeur| 23595.44383981423|   F| 28|0.7487312915438107|               0.4|\n",
+            "|5253| 0.6309711587089704| 1.6825897565572543|(lon:3.34 lat:13.95)|(lon:24.75 lat:48...|  False|  False|technicien_de_sur...| 18530.14776280135|   H| 65| 2.103237195696568|               0.4|\n",
+            "+----+-------------------+-------------------+--------------------+--------------------+-------+-------+--------------------+------------------+----+---+------------------+------------------+\n",
+            "only showing top 3 rows\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -111,7 +156,7 @@
       "metadata": {
         "id": "6lbUOxk5CmaR"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +165,7 @@
       "metadata": {
         "id": "j2f4sG98CmcB"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +174,7 @@
       "metadata": {
         "id": "F3KW_JRVCmen"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +183,7 @@
       "metadata": {
         "id": "yG3eByKRCmhU"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
