--- a/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
+++ b/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPygvZ1KiVdB/GngbNPinA4",
+      "authorship_tag": "ABX9TyNCLXNqDrkhw98yKLTylTuP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ocisse-jems/spark_bigdata/blob/main/1_PySpark_chargement_manipulation_dataframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ocisse-jems/spark_bigdata/blob/main/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -48,16 +48,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bLsbXlcGCyhh",
-        "outputId": "6274a3ce-ca1c-48cc-8d8a-e52c82f97c75"
+        "outputId": "38795ce0-edcf-465b-f83a-e5af97dfc43c"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 281.4 MB 50 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 199 kB 58.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 281.4 MB 35 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 199 kB 46.7 MB/s \n",
             "\u001b[?25h  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
@@ -74,12 +74,12 @@
       "metadata": {
         "id": "BIX2Ae9sGe9v"
       },
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {
         "id": "P79a-7mm9tJB"
       },
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "KcFKzWcnCmUO"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -122,28 +122,63 @@
     {
       "cell_type": "code",
       "source": [
-        "ville.show(3, vertical=False)"
+        "ville.show(3, vertical=True)"
       ],
       "metadata": {
         "id": "NhgOkOLxCmY2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdc79951-12a8-4122-a749-69de1a510be1"
+        "outputId": "bc40359c-ec13-47a1-c9da-9a1081222eec"
       },
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+----+-------------------+-------------------+--------------------+--------------------+-------+-------+--------------------+------------------+----+---+------------------+------------------+\n",
-            "|  id|     vitesse_a_pied|     vitesse_a_velo|                home|             travail|sportif|casseur|              statut|           salaire|sexe|age|        sportivite|velo_perf_minimale|\n",
-            "+----+-------------------+-------------------+--------------------+--------------------+-------+-------+--------------------+------------------+----+---+------------------+------------------+\n",
-            "|5251|               0.02|               0.05|(lon:26.60 lat:28...|(lon:21.08 lat:14...|  False|  False|          reserviste|29800.610034665042|   F| 18|               0.1|               0.4|\n",
-            "|5252|0.14974625830876215|0.37436564577190534|(lon:0.26 lat:42.61)|(lon:36.35 lat:33...|  False|  False|          professeur| 23595.44383981423|   F| 28|0.7487312915438107|               0.4|\n",
-            "|5253| 0.6309711587089704| 1.6825897565572543|(lon:3.34 lat:13.95)|(lon:24.75 lat:48...|  False|  False|technicien_de_sur...| 18530.14776280135|   H| 65| 2.103237195696568|               0.4|\n",
-            "+----+-------------------+-------------------+--------------------+--------------------+-------+-------+--------------------+------------------+----+---+------------------+------------------+\n",
+            "-RECORD 0----------------------------------\n",
+            " id                 | 5251                 \n",
+            " vitesse_a_pied     | 0.02                 \n",
+            " vitesse_a_velo     | 0.05                 \n",
+            " home               | (lon:26.60 lat:28... \n",
+            " travail            | (lon:21.08 lat:14... \n",
+            " sportif            | False                \n",
+            " casseur            | False                \n",
+            " statut             | reserviste           \n",
+            " salaire            | 29800.610034665042   \n",
+            " sexe               | F                    \n",
+            " age                | 18                   \n",
+            " sportivite         | 0.1                  \n",
+            " velo_perf_minimale | 0.4                  \n",
+            "-RECORD 1----------------------------------\n",
+            " id                 | 5252                 \n",
+            " vitesse_a_pied     | 0.14974625830876215  \n",
+            " vitesse_a_velo     | 0.37436564577190534  \n",
+            " home               | (lon:0.26 lat:42.61) \n",
+            " travail            | (lon:36.35 lat:33... \n",
+            " sportif            | False                \n",
+            " casseur            | False                \n",
+            " statut             | professeur           \n",
+            " salaire            | 23595.44383981423    \n",
+            " sexe               | F                    \n",
+            " age                | 28                   \n",
+            " sportivite         | 0.7487312915438107   \n",
+            " velo_perf_minimale | 0.4                  \n",
+            "-RECORD 2----------------------------------\n",
+            " id                 | 5253                 \n",
+            " vitesse_a_pied     | 0.6309711587089704   \n",
+            " vitesse_a_velo     | 1.6825897565572543   \n",
+            " home               | (lon:3.34 lat:13.95) \n",
+            " travail            | (lon:24.75 lat:48... \n",
+            " sportif            | False                \n",
+            " casseur            | False                \n",
+            " statut             | technicien_de_sur... \n",
+            " salaire            | 18530.14776280135    \n",
+            " sexe               | H                    \n",
+            " age                | 65                   \n",
+            " sportivite         | 2.103237195696568    \n",
+            " velo_perf_minimale | 0.4                  \n",
             "only showing top 3 rows\n",
             "\n"
           ]
@@ -151,37 +186,176 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## **Manipulations de base**"
+      ],
       "metadata": {
-        "id": "6lbUOxk5CmaR"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "xa0hlWhAXtkD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### types des colonnes : **dtypes**\n",
+        "\n",
+        "- types pouvant être précisés lors de la lecture\n",
+        "- sinon, colonnes lues par défaut en type **string**"
+      ],
+      "metadata": {
+        "id": "_qLeh_cRX7c7"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ville.dtypes"
+      ],
       "metadata": {
-        "id": "j2f4sG98CmcB"
+        "id": "6lbUOxk5CmaR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b6083ad0-d5c5-4dc7-e5a9-711f858321db"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('id', 'string'),\n",
+              " ('vitesse_a_pied', 'string'),\n",
+              " ('vitesse_a_velo', 'string'),\n",
+              " ('home', 'string'),\n",
+              " ('travail', 'string'),\n",
+              " ('sportif', 'string'),\n",
+              " ('casseur', 'string'),\n",
+              " ('statut', 'string'),\n",
+              " ('salaire', 'string'),\n",
+              " ('sexe', 'string'),\n",
+              " ('age', 'string'),\n",
+              " ('sportivite', 'string'),\n",
+              " ('velo_perf_minimale', 'string')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### nb de lignes : fontion **count**"
+      ],
+      "metadata": {
+        "id": "45WH7O80YZjr"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ville.count()"
+      ],
       "metadata": {
-        "id": "F3KW_JRVCmen"
+        "id": "j2f4sG98CmcB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "27657cf8-f92f-468f-f1b5-35f6673a8466"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1083"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# nb distinct de lignes \n",
+        "ville.distinct().count()"
+      ],
+      "metadata": {
+        "id": "F3KW_JRVCmen",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c0dbbfe9-eb06-4356-c2bc-88f69b93cf85"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1083"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "yG3eByKRCmhU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7In5Z6jSYtJS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HYMqQzu4YtPL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mp5RYXSZYtQf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rzSz-UmZYtUR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G7cywKjbYtV9"
       },
       "execution_count": null,
       "outputs": []
