--- a/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
+++ b/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCLXNqDrkhw98yKLTylTuP",
+      "authorship_tag": "ABX9TyPd+CjiN/WI69mfAV7Zj0ZS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,8 +68,8 @@
       "source": [
         "# java env\n",
         "\n",
-        "import os\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\""
+        "# import os\n",
+        "# os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\""
       ],
       "metadata": {
         "id": "BIX2Ae9sGe9v"
@@ -85,8 +85,36 @@
       },
       "outputs": [],
       "source": [
+        "# SparkSession \n",
+        "\n",
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder.getOrCreate()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# access to drive for getting data\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sXh7an4TdLLc",
+        "outputId": "2cc1dd30-951c-4c1e-9939-7cce0527d3ec"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
       ]
     },
     {
@@ -101,13 +129,13 @@
     {
       "cell_type": "code",
       "source": [
-        "path_csv = \"ville_1.csv\"\n",
+        "path_csv = \"/content/drive/MyDrive/Spark/projet_simul_velos_libre_service/data/Villes/ville_1.csv\"\n",
         "ville = spark.read.format(\"csv\").option(\"header\", \"true\").load(path_csv)"
       ],
       "metadata": {
         "id": "KcFKzWcnCmUO"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -129,9 +157,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc40359c-ec13-47a1-c9da-9a1081222eec"
+        "outputId": "5e392c1f-c574-46fc-8c16-c2dea14e0774"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,9 +244,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b6083ad0-d5c5-4dc7-e5a9-711f858321db"
+        "outputId": "d4608c7d-da38-4672-fe6f-e13791bfabdd"
       },
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +268,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 15
         }
       ]
     },
@@ -263,9 +291,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "27657cf8-f92f-468f-f1b5-35f6673a8466"
+        "outputId": "b00a46c2-80b1-4351-f8db-77fe5823b783"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +303,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 13
         }
       ]
     },
@@ -290,9 +318,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0dbbfe9-eb06-4356-c2bc-88f69b93cf85"
+        "outputId": "100aea15-aabd-4d07-e03c-8898f22e99f7"
       },
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 14
         }
       ]
     },
